src/index.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: "Atkinson Hyperlegible";
  src: url("/public/fonts/Atkinson-Hyperlegible-Regular-102.eot"); /* IE9 Compat Modes */
  src: url("/public/fonts/Atkinson-Hyperlegible-Regular-102.eot#iefix")
      format("embedded-opentype"),
    /* IE6-IE8 */ url("/public/fonts/Atkinson-Hyperlegible-Regular-102a.woff2")
      format("woff2"),
    /* Super Modern Browsers */
      url("/public/fonts/Atkinson-Hyperlegible-Regular-102.woff") format("woff"),
    /* Pretty Modern Browsers */
      url("/public/fonts/Atkinson-Hyperlegible-Regular-102.ttf")
      format("truetype"),
    /* Safari, Android, iOS */
      url("/public/fonts/Atkinson-Hyperlegible-Regular-102.svg#AtkinsonHyperlegible-Regular")
      format("svg"); /* Legacy iOS */
}
@font-face {
  font-family: "Atkinson Hyperlegible Bold";
  src: url("/public/fonts/Atkinson-Hyperlegible-Bold-102.eot"); /* IE9 Compat Modes */
  src: url("/public/fonts/Atkinson-Hyperlegible-Bold-102.eot#iefix")
      format("embedded-opentype"),
    /* IE6-IE8 */ url("/public/fonts/Atkinson-Hyperlegible-Bold-102a.woff2")
      format("woff2"),
    /* Super Modern Browsers */
      url("/public/fonts/Atkinson-Hyperlegible-Bold-102.woff") format("woff"),
    /* Pretty Modern Browsers */
      url("/public/fonts/Atkinson-Hyperlegible-Bold-102.ttf") format("truetype"),
    /* Safari, Android, iOS */
      url("/public/fonts/Atkinson-Hyperlegible-Bold-102.svg#AtkinsonHyperlegible-Bold")
      format("svg"); /* Legacy iOS */
}

body {
  font-family: "Atkinson Hyperlegible", sans-serif;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Atkinson Hyperlegible Bold", sans-serif;
  box-shadow: inset 0 -0.8em 0 #fe664f80;
  @apply text-gray-800;
}

.font-logo {
  font-family: "Megrim", sans-serif;
}

input[type="checkbox"]:checked + span.ingredient-item {
  text-decoration: line-through;
}

.btn-brand {
  @apply py-2 px-4 bg-brand text-white rounded-lg shadow-md focus:outline-none focus:ring-2 focus:ring-brand focus:ring-opacity-75;
}

.dotted-background {
  background-image: radial-gradient(#000 5%, transparent 6%);
  background-size: 15px 15px;
}

[type=checkbox] {
   -webkit-appearance: none;
   -moz-appearance:    none;
   appearance:         none;
}

[type=checkbox] {
  width: 20px;
  height: 20px;
  margin-right: 8px;
  position: relative;
  flex: 0 0 auto;
  @apply border border-brand;
}

[type=checkbox]:checked::before {
  content: "";
  width: 14px;
  height: 14px;
  position: absolute;
  top: 2px;
  left: 2px;
  @apply bg-brand;
}

